
- Issue #15900: Fix reference leak in PyUnicode_TranslateCharmap().

- Issue #15839: Convert SystemErrors in super() to RuntimeErrors.

- Issue #15846: Fix SystemError which happened when using ast.parse in an
  exception handler on code with syntax errors.

- Issue #15801: Make sure mappings passed to '%' formatting are actually
  subscriptable.

Library
-------

- Issue #15421: fix an OverflowError in Calendar.itermonthdates() after
  datetime.MAXYEAR.  Patch by Cédric Krier.

- Issue #15970: xml.etree.ElementTree now serializes correctly the empty HTML
  elements 'meta' and 'param'.

- Issue #15842: the SocketIO.{readable,writable,seekable} methods now
  raise ValueError when the file-like object is closed.  Patch by Alessandro
  Moura.

- Issue #15882: Change _decimal to accept any coefficient tuple when
  constructing infinities. This is done for backwards compatibility
  with decimal.py: Infinity coefficients are undefined in _decimal
  (in accordance with the specification).

- Issue #15876: Fix a refleak in the curses module: window.encoding.

- Issue #15881: Fixed atexit hook in multiprocessing.  Original patch
  by Chris McDonough.

- Issue #15340: Fix importing the random module when /dev/urandom cannot
  be opened.  This was a regression caused by the hash randomization patch.

- Issue #15841: The readable(), writable() and seekable() methods of BytesIO
  and StringIO objects now raise ValueError when the object has been closed.
  Patch by Alessandro Moura.

- Issue #15447: Use subprocess.DEVNULL in webbrowser, instead of opening
  os.devnull explicitly and leaving it open.

- Issue #15509: webbrowser.UnixBrowser no longer passes empty arguments to
  Popen when %action substitutions produce empty strings.

- Issue #12776,#11839: call argparse type function (specified by add_argument)
  only once. Before, the type function was called twice in the case where the
  default was specified and the argument was given as well.  This was